<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.3">
    </LinearLayout>

    <RelativeLayout
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/titulo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon"
            android:layout_centerHorizontal="true"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/titulo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trading_cards"
            android:layout_below="@id/titulo1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25sp"
            android:textSize="29sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titulo2"
            android:layout_alignParentStart="true">
            <EditText
                android:id="@+id/eteUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10sp"
                android:hint="@string/ingrese_usuario"
                />
            <EditText
                android:id="@+id/etePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eteUsuario"
                android:layout_marginTop="10sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
            <LinearLayout
                android:layout_below="@id/etePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/butLogin"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
                <Button
                    android:id="@+id/butRegistro"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registro"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>




</LinearLayout>
